{
 "word": "dune",
 "entries": [
  {
   "category": "Nom",
   "synonyms": [
    "butte",
    "monticule",
    "mamelon",
    "tertre",
    "colline",
    "motte",
    "mont",
    "ballon",
    "talus",
    "erg",
    "désert",
    "sable",
    "gravier",
    "arène",
    "limon",
    "grève",
    "plage",
    "sablon",
    "décape"
   ]
  }
 ]
}